// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DonorsList renders without crashing 1`] = `
<DocumentFragment>
  <div
    class="sc-qOvoE hIfWnJ sc-qWSGh dpgLb"
  >
    <div
      class="sc-AxirZ sc-AxhCb sc-pAMRk gNNRns"
      width="1"
    >
      <div
        class="sc-AxhUy ilqMHx"
      >
        No donors yet...
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DonorsList skeleton renders without crashing 1`] = `
<DocumentFragment>
  <div
    class="sc-qOvoE hIfWnJ sc-qWSGh dpgLb"
  >
    <div
      class="sc-AxirZ sc-AxhCb sc-pAMRk gNNRns"
      width="1"
    >
      <div
        class="sc-AxirZ sc-pQfvp sc-pIITJ jbXkIh sc-pZCbX dKTmpj"
        color="background.lightest"
        width="1"
      >
        <span>
          <span
            class="react-loading-skeleton css-1x45xix-skeletonStyles-Skeleton"
            style="width: 25%; height: 14px;"
          >
            ‌
          </span>
        </span>
        <span>
          <span
            class="react-loading-skeleton css-1x45xix-skeletonStyles-Skeleton"
            style="width: 50%; height: 14px;"
          >
            ‌
          </span>
        </span>
      </div>
      <div
        class="sc-AxirZ sc-pQfvp sc-pIITJ jbXkIh sc-pZCbX dKTmpj"
        color="background.lightest"
        width="1"
      >
        <span>
          <span
            class="react-loading-skeleton css-1x45xix-skeletonStyles-Skeleton"
            style="width: 25%; height: 14px;"
          >
            ‌
          </span>
        </span>
        <span>
          <span
            class="react-loading-skeleton css-1x45xix-skeletonStyles-Skeleton"
            style="width: 50%; height: 14px;"
          >
            ‌
          </span>
        </span>
      </div>
      <div
        class="sc-AxirZ sc-pQfvp sc-pIITJ jbXkIh sc-pZCbX dKTmpj"
        color="background.lightest"
        width="1"
      >
        <span>
          <span
            class="react-loading-skeleton css-1x45xix-skeletonStyles-Skeleton"
            style="width: 25%; height: 14px;"
          >
            ‌
          </span>
        </span>
        <span>
          <span
            class="react-loading-skeleton css-1x45xix-skeletonStyles-Skeleton"
            style="width: 50%; height: 14px;"
          >
            ‌
          </span>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
